# gstreamerTemplate

./: 3mixer  3mixer.c  3mixertemplate.c  CMakeLists.txt  Protonect  TutorialOfPlayBin.c  cli commands  perspective.xml  required format.txt  start_dual_src.sh  template to g-streamer.c
examples/Changing pipeline/: changing_pipeline  changing_pipeline.cpp  dynamic_sources  dynamic_sources.cpp  pipeline.py
gst-webcam-input-0.10.0.1/: ChangeLog  Makefile  Makefile.in  README  TODO  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
gst-webcam-input-0.10.0.1/m4/: Makefile  Makefile.in
gst-webcam-input-0.10.0.1/src/: Makefile  Makefile.am  Makefile.in
gst-webcam-input-0.10.0.1/src/appl/: Makefile  Makefile.am  Makefile.in  gst-tuio-setting.c  gst-webcam-input-appl-win32.c  gst-webcam-input-appl.c  gst-webcam-input-cali.c  gst-webcam-input-conf.c  gst-webcam-input-cpuusage-linux.c  gst-webcam-input-cpuusage-win32.c  gst-webcam-input-driver.c  gst-webcam-input-gst.c  gst-webcam-input-uinput.c  gst-webcam-input-win.c  gst-webcam-input-x11.c  gst-webcam-input.conf  gst-webcam-input.conf.in  gst-webcam-input.ui  n-point-cal.c
gst-webcam-input-0.10.0.1/src/gst-plugin/: Makefile  Makefile.am  Makefile.in  blob_detector.c  gstblobstotuio.c  gstblobstotuio.h  image_utils.c  image_utils_iwmmxt.c  image_utils_mmx.c  image_utils_neon.c
gstreamer tutorials/: Gstreamer tutorails  Makefile  basic-tutorial-1.c  basic-tutorial-2  basic-tutorial-2.c
gstreamerTemplate/: .gitignore  README.md  Web Server Python  cli commands  introduction.c  multiple source
gstreamerTemplate-build/: CMakeCache.txt  cmake_install.cmake  gstreamerTemplate.cbp
react/: data.tar.xz
